php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #27391 typo in Fatal Error message
Submitted: 2004-02-25 05:31 UTC Modified: 2004-02-25 05:36 UTC
From: anselor at yahoo dot com Assigned:
Status: Closed Package: Unknown/Other Function
PHP Version: 5CVS-2004-02-25 (dev) OS: Linux
Private report: No CVE-ID: None
 [2004-02-25 05:31 UTC] anselor at yahoo dot com
Description:
------------
The new error message for throwing a class that doesn't extend Exception has a typo.

The message i got was:
Fatal error: Exceptions must valid objects that are derived from class Exception in /home/anselor/var/www-data/htdocs/exceptiontest.phtml on line 20

Perhaps it should be something more like:
Fatal error: Exceptions must BE valid objects that are derived from class Exception in /home/anselor/var/www-data/htdocs/exceptiontest.phtml on line 20

Very very very minor issue, just thought I'd let you know.


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2004-02-25 05:36 UTC] derick@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 11 04:00:01 2026 UTC