- Fixed bug #27391 (typo in Fatal Error message).

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@152312 c90b9560-bf6c-de11-be94-00142212c4b1